<resources>
    <string name="app_name">Sikemas IF for Admin</string>
    <string name="app_short_name">SIKEMAS IF</string>
    <string name="search_item">Search</string>
    <string name="refresh_item">Refresh</string>
    <string name="iv_id_card">IDCard</string>
    <string name="edt_nrp">NRP</string>
    <string name="edt_nama">Nama</string>
    <string name="edt_noTelepon">Nomor Telepon</string>
    <string name="edt_password">Password (kata sandi)</string>
    <string name="edt_confirm_password">Konfirmasi Password (kata sandi)</string>
    <string name="reset_item">Reset</string>
    <string name="done_item">Done</string>
    <string name="tv_nrp_caption">NRP</string>
    <string name="tv_nama_mahasiswa_caption">Nama Mahasiswa</string>
    <string name="phone_icon_desc">phone_icon</string>
    <string name="password_icon_desc">password_icon</string>
    <string name="error_msg_noHP">nomor telepon tidak boleh kosong</string>
    <string name="error_msg_password">password tidak boleh kosong</string>
    <string name="error_msg_konfirm_password">konfirmasi password tidak boleh kosong</string>
    <string name="error_msg_konfirm_password_2">password tidak cocok</string>
    <string name="wajah_terambil_label">Jumlah wajah terambil</string>
    <string name="tv_empty_value">-</string>
    <string name="menambah_data_set_wajah_dari_message">Menambah data wajah dari:</string>
    <string name="tandatangan_disini_hint">Tandatangan disini</string>
    <string name="memproses_data_set_title">Memproses Data Wajah...</string>
    <string name="proses_latihan_caption">Proses Latihan</string>
    <string name="welcome_message_1">Selamat Datang</string>
    <string name="welcome_message_2">Sistem Kehadiran Mahasiswa\nTeknik Informatika ITS</string>
    <string name="string_logout">Logout</string>
    <string name="logo_sikemas_content_desc">logo_sikemas</string>
    <string name="login_title">Akun Admin</string>
    <string name="password_prompt_label">Password</string>
    <string name="email_prompt_label">Email</string>
    <string name="sign_in_button">Masuk</string>
    <string name="title_underline_content_desc">title_underline</string>
    <string name="tambah_data_mahasiswa_btn_string">Tambah Data Mahasiswa</string>
    <string name="lihat_daftar_mahasiswa_btn_string">Lihat Daftar Mahasiswa</string>
    <string name="generate_training_data_btn_string">Generate Training Data</string>
    <string name="total_data_lengkap_string_caption">Total Data Lengkap</string>
    <string name="status_data_mahasiswa_title_string">Status Data Mahasiswa</string>
</resources>
