<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_app"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_tambah_data_diri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_id_card"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/iv_id_card"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_141_id_card" />

                <TextView
                    android:id="@+id/tvNrpCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/tv_nrp_caption"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorSecondaryText"
                    app:layout_constraintLeft_toRightOf="@id/iv_id_card"
                    app:layout_constraintTop_toTopOf="@id/iv_id_card" />

                <TextView
                    android:id="@+id/tvNrp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="5113100112"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@id/tvNrpCaption"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNrpCaption" />

                <TextView
                    android:id="@+id/tvNamaCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nama_mahasiswa_caption"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorSecondaryText"
                    app:layout_constraintLeft_toLeftOf="@id/tvNrpCaption"
                    app:layout_constraintTop_toBottomOf="@id/tvNrp" />

                <TextView
                    android:id="@+id/tvNama"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Ronald Gunawan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@id/tvNamaCaption"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNamaCaption" />

                <TextView
                    android:id="@+id/tvDataDiriCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Diri"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/tvNama" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintBottom_toBottomOf="@id/tvDataDiriCaption"
                    app:layout_constraintLeft_toRightOf="@id/tvDataDiriCaption"
                    app:layout_constraintRight_toRightOf="parent" />

                <ImageView
                    android:contentDescription="@string/phone_icon_desc"
                    android:id="@+id/ivPhone"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tilNomorTelpon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_141_archive" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilNomorTelpon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toRightOf="@id/ivPhone"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDataDiriCaption">

                    <EditText
                        android:id="@+id/edtNoTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edt_noTelepon"
                        android:textSize="18sp"
                        android:inputType="phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryText" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:contentDescription="@string/password_icon_desc"
                    android:id="@+id/ivPassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tilPassword"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_141_dna" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toRightOf="@id/ivPassword"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilNomorTelpon">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edt_password"
                        android:textSize="18sp"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryText" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:contentDescription="@string/password_icon_desc"
                    android:id="@+id/ivKonfirmasiPassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tilKonfirmasiPassword"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_141_dna" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilKonfirmasiPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toRightOf="@id/ivKonfirmasiPassword"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword">

                    <EditText
                        android:id="@+id/edtKonfirmasiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edt_confirm_password"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryText" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
