<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context="absensi.anif.its.ac.id.sikemastcforadmin.activity.DaftarMahasiswaActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_info_keseluruhan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingEnd="32dp"
            android:paddingStart="0dp">

            <ImageView
                android:id="@+id/iv_jumlah_mahasiswa_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_jumlah_mahasiswa_caption"
                app:layout_constraintTop_toBottomOf="@+id/tv_jumlah_mahasiswa_caption"
                app:srcCompat="@drawable/ic_141_browser_xlarge" />

            <ImageView
                android:id="@+id/iv_title_underline"
                android:layout_width="0dp"
                android:layout_height="4dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_daftar_mahasiswa_title"
                app:layout_constraintRight_toRightOf="@+id/tv_daftar_mahasiswa_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_daftar_mahasiswa_title"
                app:srcCompat="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tv_daftar_mahasiswa_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/status_data_mahasiswa_title_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_jumlah_mahasiswa_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:text="Total Mahasiswa"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_daftar_mahasiswa_title"
                app:layout_constraintTop_toBottomOf="@+id/iv_title_underline" />

            <TextView
                android:id="@+id/tv_jumlah_mahasiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_empty_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_jumlah_mahasiswa_icon"
                app:layout_constraintLeft_toRightOf="@id/iv_jumlah_mahasiswa_icon"
                app:layout_constraintTop_toTopOf="@id/iv_jumlah_mahasiswa_icon"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/tv_total_data_lengkap_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:text="@string/total_data_lengkap_string_caption"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/tv_jumlah_mahasiswa_caption"
                app:layout_constraintTop_toBottomOf="@+id/iv_title_underline" />

            <ImageView
                android:id="@+id/iv_data_lengkap_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_total_data_lengkap_caption"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_data_lengkap_caption"
                app:srcCompat="@drawable/ic_141_folder" />

            <TextView
                android:id="@+id/tv_jumlah_data_lengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_empty_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorStatusHadir"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_data_lengkap_icon"
                app:layout_constraintLeft_toRightOf="@id/iv_data_lengkap_icon"
                app:layout_constraintTop_toTopOf="@id/iv_data_lengkap_icon"
                app:layout_constraintVertical_bias="0.5" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/pbLoadingIndikator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvPilihMahasiswa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_info_keseluruhan"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
